Fix back button styling on mobile browsers

--- a/src/app/shared/components/go-back-button/go-back-button.component.scss
+++ b/src/app/shared/components/go-back-button/go-back-button.component.scss
@@ -7,14 +7,19 @@
     top: 0;
     left: 0;
     z-index: 100;
-    margin: 15px;
-    font-size: 30px;
+    margin: 1rem;
+    font-size: 1.5rem;
     color: #3498db;
     background-color: #ffff;
     border: solid 1px #3498db;
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 2em;
+    height: 2em;
+}
+
+.return:hover{
+    background-color: #3498db;
+    color: #ffff;
 }
 
 .return::before {
